completed preprocessing in jupyter notebook

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,15 @@ numpy
 scikit-learn
 torch
 
+# Data Visualization
+matplotlib
+seaborn
+
+# cheminformatics
+rdkit
+chembl_webresource_client
+tape-proteins
+
 # FastAPI Backend
 fastapi
 uvicorn
